<resources>
    <string name="app_name">HubOS Android</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="retry">Retry</string>
    <string name="degreeSymbol">%1$s°</string>
    <string name="emptyString" />
    <string name="weatherImageDescription">weatherImage</string>
    <string name="table">Table</string>
    <string name="games">Games</string>
    <string name="topics">Topics</string>
    <string name="tap_for_menu">Tap for Menu</string>
    <string name="survey">Survey</string>
    <string name="split_the_bill">Split the Bill</string>
    <string name="showWeekWeather">showWeekWeather</string>
    <string name="app_icon">App Icon</string>
    <string name="return_to_apps_button">Return to apps button</string>
    <string name="transitionName">transitionName</string>
    <string name="welcome_to_hubOS">Welcome to HubOS</string>
    <string name="hub_lock_screen_instructions">Please type in the establishment password below in order to access the admin panel</string>
    <string name="welcome_admin_panel">Welcome to the Admin Panel</string>
    <string name="table_colon">Table:</string>
    <string name="reload">Reload</string>
    <string name="establishment_display">Establishment: %1$s</string>
    <string name="device_id_display">Device ID: %1$s</string>
    <string name="table_num_shared_preferences">table_num_shared_preferences</string>
    <string name="debug_mode_shared_preferences">debug_mode_shared_preferences</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="clear">Clear</string>
    <string name="backspace_icon">backspace_icon</string>
    <string name="table_num_display">Table: %1$s</string>
    <string name="app_version_display">App Version: %1$s</string>
    <string name="settings">Settings</string>
    <string name="debug_off">Debug: OFF</string>
    <string name="contact_backspace_line">If you are having issues contact Backspace at +964 770 912 9768</string>
    <string name="showWifiCode">showWifiCode</string>
    <string name="wifi_name_display">Wifi: %1$s</string>
    <string name="wifi_pw_display">Wifi PW: %1$s</string>
    <string name="qr_code_image">QR Code Image</string>
    <string name="selected">Selected: %1$s IQD</string>
    <string name="service">Service: %1$s IQD</string>
    <string name="vat">VAT: %1$s IQD</string>
    <string name="discount">Discount: %1$s IQD</string>
    <string name="total">Total: %1$s IQD</string>
    <string name="split">Split</string>
    <string name="post_check_note"><![CDATA[*VAT & discounts applied after ordering check]]></string>
    <string name="split_evenly">Split Evenly</string>
    <string name="split_the_bill_evenly_between_tv">Split the bill evenly between:</string>
    <string name="selected_items">Selected Items</string>
    <string name="all_items">All Items</string>
    <string name="split_bill_result">Result: %1$s</string>
    <string name="split_bill_IQD_result">%1$s IQD each</string>
    <string name="add_button_desc">add_button_desc</string>
    <string name="minus_button_desc">minus_button_desc</string>
    <string name="dayNightModePreference">dayNight</string>
    <string name="brightness_icon">Brightness Icon</string>
    <string name="numberPercentage">%1$s%%</string>
    <string name="apps_icon">Apps Icon</string>
    <string name="topic_of_the_day">Topic of the Day</string>
    <string name="update_hubos">Update HubOS</string>
    <string name="update_app_message">Your HubOS version is out of date. Please update to the latest version</string>
    <string name="splash_screen_error_message">"Oops! Theres been an error: %1$s. Tap below to retry."</string>
    <string name="hub_icon">Hub Icon</string>
    <string name="est_code_req_message">Please enter your establishment code</string>
    <string name="splash_screen_update_error_message">There was an error downloading app version %1$s. Cause of Error: %2$s</string>
    <string name="splash_screen_downloading_updating_message">App version %1$s is downloading. Please do not exit the app.</string>
    <string name="tails">Tails</string>
    <string name="trivia_difficulty">Difficulty: %1$s</string>
    <string name="number_out_of_ten">%1$s / 10</string>
    <string name="next">Next</string>
    <string name="check_answer">Check Answer</string>
    <string name="finish">Finish</string>
    <string name="your_score_is">Your score is:</string>
    <string name="play_again">Play Again</string>
    <string name="changeTriviaTitlesKey">changeTriviaTitlesKey</string>
    <string name="title">title</string>
    <string name="instructions">instructions</string>
    <string name="eight_ball_icon">Eight ball icon</string>
    <string name="magic_eight_ball">Magic Eight Ball</string>
    <string name="flip_a_coin">Flip a Coin</string>
    <string name="spin_the_bottle">Spin the Bottle</string>
    <string name="higher_or_lower">Higher or Lower</string>
    <string name="would_you_rather">Would you Rather?</string>
    <string name="trivia">Trivia</string>
    <string name="dice_roll">Dice Roll</string>
    <string name="daily_horoscope">Daily Horoscope</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="tap_to_flip_the_coin">Tap to flip the coin</string>
    <string name="coin_image">Coin image</string>
    <string name="flip_coin_again">Tap to flip the coin again!</string>
    <string name="shake_me">Shake Me</string>
    <string name="eight_ball_instructions">Ask a yes or no question and press the button!</string>
    <string name="category">Category</string>
    <string name="trivia_instructions">Choose the right answer then click next</string>
    <string name="art">Art</string>
    <string name="computers">Computers</string>
    <string name="film">Film</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="mathematics">Mathematics</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="vehicles">Vehicles</string>
    <string name="video_games">Video Games</string>
    <string name="science_nature">Science Nature</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="bg_iv">bg_iv</string>
    <string name="player_x_turn">Player X Turn</string>
    <string name="player_o_turn">Player O Turn</string>
    <string name="draw">Draw!</string>
    <string name="counter_x_iv">counter_x_iv</string>
    <string name="counter_o_iv">counter_o_iv</string>
    <string name="xo_card_iv">xo_card_iv</string>
    <string name="choose_number_players">Please choose the number of players</string>
    <string name="player_num">Player %1$d</string>
    <string name="beer_bottle_image">beer bottle image</string>
    <string name="character_image">character image</string>
    <string name="player_1">Player 1</string>
    <string name="picked_player_iv">Picked player iv</string>
    <string name="player_1_circle">Player 1 circle</string>
    <string name="player_2_circle">Player 2 circle</string>
    <string name="player_3_circle">Player 3 circle</string>
    <string name="player_4_circle">Player 4 circle</string>
    <string name="player_5_circle">Player 5 circle</string>
    <string name="player_6_circle">Player 6 circle</string>
    <string name="player_7_circle">Player 7 circle</string>
    <string name="player_8_circle">Player 8 circle</string>
    <string name="quick_order">Quick Order</string>
    <string name="quick_order_icon">quick_order_icon</string>
    <string name="order_confirmation_message">Are you sure you want to order?</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="company_logo">company_logo</string>
    <string name="backspace_info">At the core, Backspace is a software and business development company founded in 2020 and based in Kurdistan, Iraq.\n\nBackspace aims to revolutionize the business processes for restaurants, pharmacies and logistics industries. Backspace helps restaurants and retailers efficiently manage their stock, gain clarity on their inventory, and boost sales through data analytics.</string>
    <string name="about_backspace">About Backspace</string>
    <string name="instagram_qr_code">instagram_qr_code</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin_qr_code">linkedin_qr_code</string>
    <string name="linkedin">LinkedIn</string>
    <string name="contact_qr_code">contact_qr_code</string>
    <string name="dice_app_title">Roll some Dice!</string>
    <string name="dice_app_desc">Tap the screen to roll the rice</string>
    <string name="second_dice_iv">second_dice_iv</string>
    <string name="first_dice_iv">first_dice_iv</string>
    <string name="no_order_items_message">Oops! No items right now.</string>
    <string name="would_you_rather_instructions">Tap for a question!</string>
    <string name="would_you_rather_welcome">Welcome to would you rather!</string>
    <string name="contact_us">Contact Us!</string>
    <string name="taurus">Taurus</string>
    <string name="aries">Aries</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="horoscope_category_title">Welcome to your daily horoscope</string>
    <string name="horoscope_category_desc">Please choose your star sign</string>
    <string name="no_items_image">no_items_image</string>
    <string name="stars_background">stars background</string>
    <string name="chosen_horoscope_iv">chosen_horoscope_iv</string>
    <string name="mood">Mood:</string>
    <string name="compatibility">Compatibility:</string>
    <string name="lucky_color">Lucky Color:</string>
    <string name="lucky_number">Lucky Number:</string>
    <string name="lucky_time">Lucky Time:</string>
    <string name="tip_of_the_day">Tip of the Day:</string>
    <string name="get_another_horoscope">Get Another Horoscope!</string>
    <string name="get_my_horoscope">Get my Horoscope!</string>
    <string name="ordered_item_iv">ordered_item_iv</string>
    <string name="register_message">Please register your devices establishment through the admin panel and enter your establishment pin code below.</string>
    <string name="register">Register</string>
    <string name="restaurant_menu">%1$s Menu</string>
    <string name="error_image">error_image</string>
    <string name="gifted">Gifted!</string>
    <string name="item_ordered">Item Ordered</string>
    <string name="check_mark">check_mark</string>
    <string name="hub_os_message">Welcome to HubOS. Through HubOS you can manage your table and stay entertained so you can have an enhanced dining experience!</string>
    <string name="website">Website</string>
    <string name="tap_for_another_question">Tap for another question!</string>
    <string name="circle">circle</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="background_decoration">background decoration</string>
    <string name="character_choosing_instructions">Please choose your character then press next</string>
    <string name="ad_image">Ad Image</string>
    <string name="scan_for_menu">Scan for Menu</string>
</resources>