<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spin_bottle_app_bg_gradient"
    tools:context=".ui.mainActivity.fragments.games.SpinBottlePlayerNumberChoice">

    <TextView
        android:id="@+id/spin_bottle_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/spin_the_bottle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spin_bottle_instructions_tv"
        style="@style/standard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/choose_number_players"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spin_bottle_title_tv" />

    <GridLayout
        android:id="@+id/player_num_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spin_bottle_instructions_tv">

        <com.google.android.material.card.MaterialCardView
            android:tag="@string/_3"
            app:cardBackgroundColor="#59FF0000">

            <TextView
                style="@style/spin_bottle_ts"
                android:text="@string/_3" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:tag="@string/_4"
            app:cardBackgroundColor="#59FAFF00">

            <TextView
                style="@style/spin_bottle_ts"
                android:text="@string/_4" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:tag="@string/_5"
            app:cardBackgroundColor="#5900FF00">

            <TextView
                style="@style/spin_bottle_ts"
                android:text="@string/_5" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:tag="@string/_6"
            app:cardBackgroundColor="#59FFA800">

            <TextView
                style="@style/spin_bottle_ts"
                android:text="@string/_6" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:tag="@string/_7"
            app:cardBackgroundColor="#598F00FF">

            <TextView
                style="@style/spin_bottle_ts"
                android:text="@string/_7" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:tag="@string/_8"
            app:cardBackgroundColor="#59FF00F5">

            <TextView
                style="@style/spin_bottle_ts"
                android:text="@string/_8" />
        </com.google.android.material.card.MaterialCardView>


    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>