<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backspace_app_bg"
    android:padding="46dp"
    tools:context=".ui.mainActivity.fragments.games.BackspaceAppFragment">

    <ImageView
        android:id="@+id/backspace_iv"
        android:layout_width="186dp"
        android:layout_height="186dp"
        android:contentDescription="@string/backspace_icon"
        android:src="@drawable/ic_baseline_backspace_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/backspace_title_tv"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_backspace"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backspace_iv" />

    <TextView
        android:id="@+id/backspace_info_tv"
        style="@style/standard_text_no_alignment_multiple_lines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backspace_info"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/website_qr_iv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backspace_title_tv" />

    <ImageView
        android:id="@+id/insta_qr_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/website_qr_bg"
        android:contentDescription="@string/instagram_qr_code"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backspace_info_tv" />

    <TextView
        android:id="@+id/insta_qr_tv"
        style="@style/standard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/instagram"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/insta_qr_iv"
        app:layout_constraintRight_toRightOf="@id/insta_qr_iv"
        app:layout_constraintTop_toBottomOf="@id/insta_qr_iv" />


    <ImageView
        android:id="@+id/website_qr_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/website_qr_bg"
        android:contentDescription="@string/linkedin_qr_code"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/insta_qr_iv"
        app:layout_constraintRight_toLeftOf="@id/contact_qr_iv"
        app:layout_constraintTop_toBottomOf="@id/backspace_info_tv" />

    <TextView
        android:id="@+id/linkedin_qr_tv"
        style="@style/standard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/website"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/website_qr_iv"
        app:layout_constraintRight_toRightOf="@id/website_qr_iv"
        app:layout_constraintTop_toBottomOf="@id/website_qr_iv" />

    <ImageView
        android:id="@+id/contact_qr_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/website_qr_bg"
        android:contentDescription="@string/contact_qr_code"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backspace_info_tv" />

    <TextView
        android:id="@+id/contact_qr_tv"
        style="@style/standard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/contact_us"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/contact_qr_iv"
        app:layout_constraintRight_toRightOf="@id/contact_qr_iv"
        app:layout_constraintTop_toBottomOf="@id/contact_qr_iv" />

</androidx.constraintlayout.widget.ConstraintLayout>