<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/fragment_apps">

    <TextView
        style="@style/standard_text"
        android:layout_width="match_parent"
        android:text="@string/coming_soon"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/orange_color"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_smiley"
        android:contentDescription="@string/app_icon"
        app:layout_constraintBottom_toTopOf="@id/survey_icon_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/survey_icon_tv"
        style="@style/app_icon_text_style"
        android:layout_width="match_parent"
        android:text="@string/survey"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>