<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/dice_gradient_bg"
    tools:context=".ui.mainActivity.fragments.games.DiceFragment">

    <TextView
        android:id="@+id/title_tv"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dice_app_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions_tv"
        style="@style/standard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice_app_desc"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv" />

    <ImageView
        android:id="@+id/dice_iv_1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/first_dice_iv"
        android:src="@drawable/ic_dice_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dice_iv_2"
        app:layout_constraintTop_toBottomOf="@id/instructions_tv" />

    <ImageView
        android:id="@+id/dice_iv_2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/second_dice_iv"
        android:src="@drawable/ic_dice_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dice_iv_1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructions_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>